04_k8s-platform-anisble-2026/02-gitops/components/kyverno/policies/network/enforce-gateway-api.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: enforce-gateway-api-only
  annotations:
    policies.kyverno.io/severity: high
    policies.kyverno.io/category: network
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: reject-legacy-ingress
      match:
        any:
        - resources:
            kinds: [networking.k8s.io/v1/Ingress]
      validate:
        message: "Использование устаревшего ресурса Ingress запрещено. Используйте Gateway API (HTTPRoute)."
        deny: {}
